--- a/search.html
+++ b/search.html
@@ -1,197 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Search - Starlight</title>
-<link rel="icon" href="hybrid.png">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-<style>
-:root {
-  --bg: #f3f4f6;
-  --card: #fff;
-  --muted: #6b7280;
-  --hover: #e5e7eb;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Search - Starlight</title>
+  <link rel="icon" href="hybrid.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <style>
+    :root {
+      --bg: #f3f4f6;
+      --card: #fff;
+      --muted: #6b7280;
+      --hover: #e5e7eb;
+    }
 
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial, Helvetica, sans-serif;}
+    *{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;}
+    body{background:var(--bg);display:flex;justify-content:center;align-items:flex-start;height:100vh;padding-top:50px;}
 
-body{
-  background:var(--bg);
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
+    .card{
+      width:50%;
+      max-width:500px;
+      background:var(--card);
+      border-radius:12px;
+      box-shadow:0 8px 24px rgba(0,0,0,0.1);
+      display:flex;
+      flex-direction:column;
+      height:600px;
+      overflow:hidden;
+    }
 
-.card{
-  width:450px;
-  height:85vh;              /* ✅ Full height box */
-  background:var(--card);
-  border-radius:12px;
-  box-shadow:0 8px 24px rgba(0,0,0,0.1);
-  display:flex;
-  flex-direction:column;
-  overflow:hidden;
-}
+    header{
+      background:var(--card);
+      padding:14px;
+      display:flex;
+      align-items:center;
+      box-shadow:0 2px 6px rgba(0,0,0,0.05);
+      position:sticky;
+      top:0;
+      z-index:10;
+    }
 
-header{
-  display:flex;
-  align-items:center;
-  gap:10px;
-  padding:16px;
-  position:sticky;
-  top:0;
-  background:var(--card);
-  border-bottom:1px solid #e5e7eb;
-  z-index:10;
-}
+    header button{
+      background:none;
+      border:none;
+      font-size:1.2rem;
+      cursor:pointer;
+      color:var(--muted);
+      margin-right:8px;
+    }
 
-header button{
-  background:none;
-  border:none;
-  font-size:1.3rem;
-  cursor:pointer;
-  color:var(--muted);
-}
+    header input{
+      flex:1;
+      padding:8px 12px;
+      border-radius:8px;
+      border:1px solid #d1d5db;
+      font-size:1rem;
+    }
 
-header input{
-  flex:1;
-  padding:8px 12px;
-  border:1px solid #d1d5db;
-  border-radius:8px;
-  font-size:1rem;
-}
+    #search-results{
+      flex:1;
+      overflow-y:auto;
+      padding:8px;
+    }
 
-#search-results{
-  flex:1;
-  overflow-y:auto;
-  padding:12px;
-}
+    .search-item{
+      display:flex;
+      align-items:center;
+      padding:10px;
+      background:var(--card);
+      border-radius:12px;
+      margin-bottom:8px;
+      cursor:pointer;
+      transition:0.2s;
+    }
 
-.search-item{
-  display:flex;
-  align-items:center;
-  gap:12px;
-  background:var(--card);
-  padding:10px;
-  border-radius:12px;
-  margin-bottom:10px;
-  cursor:pointer;
-  transition:0.2s;
-}
+    .search-item:hover{background:var(--hover);}
 
-.search-item:hover{
-  background:var(--hover);
-}
+    .search-item img{
+      width:45px;
+      height:45px;
+      border-radius:50%;
+      object-fit:cover;
+    }
 
-.search-item img{
-  width:50px;
-  height:50px;
-  border-radius:50%;
-  object-fit:cover;
-}
+    .chat-info{margin-left:12px;flex:1;}
+    .chat-info .name{font-weight:600;color:#111827;}
+    .chat-info .email{font-size:0.85rem;color:var(--muted);}
 
-.chat-info .name{font-weight:600;color:#111;}
-.chat-info .email{font-size:0.85rem;color:var(--muted);}
-
-.no-results{
-  text-align:center;
-  color:var(--muted);
-  padding:40px 16px;
-}
-</style>
+    .no-results{text-align:center;color:var(--muted);padding:32px;font-weight:500;}
+  </style>
 </head>
 <body>
 
 <div class="card">
   <header>
     <button id="back-btn"><i class="fas fa-arrow-left"></i></button>
-    <input type="text" id="search-input" placeholder="Search by name or email...">
+    <input type="text" id="search-input" placeholder="Search by name or email">
   </header>
-  
   <div id="search-results" class="no-results">Type to search...</div>
 </div>
 
 <script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA"; 
-const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+  const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA"; // Replace your anon key here
+  const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
-// Load local profile
-let hc_profile = JSON.parse(localStorage.getItem('hc_profile') || '{}');
+  let currentUser = JSON.parse(localStorage.getItem('hc_profile') || '{}');
+  let allUsers = [];
 
-const backBtn = document.getElementById('back-btn');
-const searchInput = document.getElementById('search-input');
-const searchResults = document.getElementById('search-results');
+  const searchInput = document.getElementById('search-input');
+  const searchResults = document.getElementById('search-results');
+  const backBtn = document.getElementById('back-btn');
 
-// ✅ Back to Home
-backBtn.addEventListener('click', () => {
-  window.location.href = "home.html";
-});
+  // 🔹 Back Button
+  backBtn.addEventListener('click', () => window.location.href = 'home.html');
 
-// ✅ Fetch users by email or name
-async function searchUsers(query) {
-    if (!query) return [];
+  // ✅ Step 1: Load all users from Supabase — ONE TIME ONLY
+  async function loadAllUsers() {
+    const { data, error } = await supabase.from('users').select('*');
+    if (error) { console.error(error); return; }
+    allUsers = data;
+  }
 
-    let { data, error } = await supabase
-      .from('users')
-      .select('id, name, email, profile_url')
-      .like('name', `%${query}%`);
+  // ✅ Step 2: Filter locally (Traditional Search)
+  function searchUsers(query) {
+    query = query.toLowerCase();
+    return allUsers.filter(u =>
+      (u.name && u.name.toLowerCase().includes(query)) ||
+      (u.email && u.email.toLowerCase().includes(query))
+    );
+  }
 
-    if (error) console.error(error);
-
-    // If no match by name, then try by email
-    if (!data || data.length === 0) {
-      const result = await supabase
-        .from('users')
-        .select('id, name, email, profile_url')
-        .like('email', `%${query}%`);
-      return result.data || [];
+  // ✅ Step 3: Display Results
+  function renderUsers(users) {
+    searchResults.innerHTML = '';
+    if (users.length === 0) {
+      searchResults.innerHTML = '<div class="no-results">No users found</div>';
+      return;
     }
-
-    return data;
-  }
-
-// ✅ Render search results
-function renderUsers(users){
-  searchResults.innerHTML = '';
-  if(users.length === 0){
-    searchResults.innerHTML = '<div class="no-results">No users found</div>';
-    return;
-  }
-
-  users.forEach(user => {
-    if(user.email === hc_profile.email) return; // Skip self
-    const item = document.createElement('div');
-    item.className = 'search-item';
-    item.innerHTML = `
-      <img src="${user.profile_url || 'default.png'}">
-      <div class="chat-info">
-        <div class="name">${user.name}</div>
-        <div class="email">${user.email}</div>
-      </div>
-    `;
-    item.addEventListener('click', () => {
-      window.location.href = 
-        `chat.html?name=${encodeURIComponent(user.name)}&email=${encodeURIComponent(user.email)}&profile_url=${encodeURIComponent(user.profile_url)}`;
+    users.forEach(user => {
+      if (user.email === currentUser.email) return;
+      const div = document.createElement('div');
+      div.className = 'search-item';
+      div.innerHTML = `
+        <img src="${user.profile_url || 'default.png'}">
+        <div class="chat-info">
+          <div class="name">${user.name}</div>
+          <div class="email">${user.email}</div>
+        </div>
+      `;
+      div.addEventListener('click', () => {
+        window.location.href = `chat.html?name=${encodeURIComponent(user.name)}&email=${encodeURIComponent(user.email)}&profile_url=${encodeURIComponent(user.profile_url)}`;
+      });
+      searchResults.appendChild(div);
     });
-    searchResults.appendChild(item);
-  });
-}
-
-// ✅ Input Listener
-searchInput.addEventListener('input', async e => {
-  const query = e.target.value.trim();
-  if(!query){
-    searchResults.innerHTML = '<div class="no-results">Type to search...</div>';
-    return;
   }
-  const users = await searchUsers(query);
-  renderUsers(users);
-});
+
+  // ✅ Step 4: Search Input Listener
+  searchInput.addEventListener('input', e => {
+    const query = e.target.value.trim();
+    if (!query) {
+      searchResults.innerHTML = '<div class="no-results">Type to search...</div>';
+      return;
+    }
+    const results = searchUsers(query);
+    renderUsers(results);
+  });
+
+  // ✅ First load all users
+  loadAllUsers();
 </script>
 
 </body>
