--- a/search.html
+++ b/search.html
@@ -1,177 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search - Starlight</title>
-  <link rel="icon" href="hybrid.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <style>
-    :root {
-      --bg: #f3f4f6;
-      --card: #fff;
-      --muted: #6b7280;
-      --hover: #e5e7eb;
-    }
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Search — Starlight</title>
+<link rel="icon" href="hybrid.png">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+<style>
+  :root{
+    --bg:#f3f4f6; --card:#fff; --muted:#6b7280; --accent:#2563eb; --hover:#eef2ff;
+  }
+  *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,system-ui,Arial,Helvetica,sans-serif}
+  body{min-height:100vh;background:var(--bg);display:flex;align-items:flex-start;justify-content:center;padding:48px 16px;}
+  .card{
+    width:520px; max-width:96vw; height:600px; background:var(--card); border-radius:12px;
+    box-shadow:0 18px 48px rgba(2,6,23,0.12); overflow:hidden; display:flex; flex-direction:column;
+  }
+  header{
+    display:flex; align-items:center; gap:10px; padding:14px 16px; border-bottom:1px solid rgba(15,23,42,0.04);
+    background:linear-gradient(90deg, rgba(37,99,235,0.02), transparent);
+  }
+  .btn-back{background:transparent;border:0;font-size:18px;padding:6px;border-radius:8px;cursor:pointer;color:var(--muted)}
+  .btn-back:hover{background:#f1f5f9}
+  .search-input{
+    flex:1; display:flex; align-items:center; gap:8px; background:#f8fafc; padding:8px 10px; border-radius:10px;
+    border:1px solid rgba(15,23,42,0.04);
+  }
+  .search-input input{flex:1;border:0;background:transparent;outline:none;font-size:15px;padding:6px}
+  .search-input .icon{color:var(--muted);font-size:16px}
+  .status { margin-left:8px;font-size:13px;color:var(--muted) }
 
-    *{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;}
-    body{background:var(--bg);display:flex;justify-content:center;align-items:flex-start;height:100vh;padding-top:50px;}
+  #results { padding:12px; overflow:auto; flex:1; }
+  .row{
+    display:flex; align-items:center; gap:12px; padding:10px; border-radius:10px; background:transparent;
+    transition: background .15s ease; cursor:pointer;
+  }
+  .row:hover{ background:var(--hover); }
+  .avatar{width:48px;height:48px;border-radius:50%;object-fit:cover;flex-shrink:0}
+  .info{display:flex;flex-direction:column;min-width:0}
+  .name{font-weight:700;color:#0f172a;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  .email{font-size:13px;color:var(--muted);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  .no-results{display:flex;align-items:center;justify-content:center;height:100%;color:var(--muted);font-weight:600}
 
-    .card{
-      width:50%;
-      max-width:500px;
-      background:var(--card);
-      border-radius:12px;
-      box-shadow:0 8px 24px rgba(0,0,0,0.1);
-      display:flex;
-      flex-direction:column;
-      height:600px;
-      overflow:hidden;
-    }
+  .spinner{
+    width:18px;height:18px;border-radius:50%;border:2px solid rgba(0,0,0,0.08);
+    border-top-color:var(--accent); animation:spin 1s linear infinite;margin-left:8px;
+  }
+  @keyframes spin{to{transform:rotate(360deg)}}
 
-    header{
-      background:var(--card);
-      padding:14px;
-      display:flex;
-      align-items:center;
-      box-shadow:0 2px 6px rgba(0,0,0,0.05);
-      position:sticky;
-      top:0;
-      z-index:10;
-    }
-
-    header button{
-      background:none;
-      border:none;
-      font-size:1.2rem;
-      cursor:pointer;
-      color:var(--muted);
-      margin-right:8px;
-    }
-
-    header input{
-      flex:1;
-      padding:8px 12px;
-      border-radius:8px;
-      border:1px solid #d1d5db;
-      font-size:1rem;
-    }
-
-    #search-results{
-      flex:1;
-      overflow-y:auto;
-      padding:8px;
-    }
-
-    .search-item{
-      display:flex;
-      align-items:center;
-      padding:10px;
-      background:var(--card);
-      border-radius:12px;
-      margin-bottom:8px;
-      cursor:pointer;
-      transition:0.2s;
-    }
-
-    .search-item:hover{background:var(--hover);}
-
-    .search-item img{
-      width:45px;
-      height:45px;
-      border-radius:50%;
-      object-fit:cover;
-    }
-
-    .chat-info{margin-left:12px;flex:1;}
-    .chat-info .name{font-weight:600;color:#111827;}
-    .chat-info .email{font-size:0.85rem;color:var(--muted);}
-
-    .no-results{text-align:center;color:var(--muted);padding:32px;font-weight:500;}
-  </style>
+  .error { padding:12px;color:#b91c1c; font-size:14px; }
+  footer { padding:10px 14px; border-top:1px solid rgba(15,23,42,0.03); font-size:13px;color:var(--muted); text-align:center; }
+</style>
 </head>
 <body>
 
-<div class="card">
+<div class="card" role="main" aria-label="Search users">
   <header>
-    <button id="back-btn"><i class="fas fa-arrow-left"></i></button>
-    <input type="text" id="search-input" placeholder="Search by name or email">
+    <button id="back" class="btn-back" title="Back to chats"><i class="fa-solid fa-arrow-left"></i></button>
+
+    <div class="search-input" role="search">
+      <i class="icon fa-solid fa-magnifying-glass"></i>
+      <input id="q" type="search" placeholder="Search by name or email" autocomplete="off" aria-label="Search users by name or email">
+      <div id="loading" style="display:none" aria-hidden="true"><span class="spinner"></span></div>
+    </div>
+
+    <div id="status" class="status" aria-live="polite"></div>
   </header>
-  <div id="search-results" class="no-results">Type to search...</div>
+
+  <div id="results" aria-live="polite">
+    <div class="no-results">Type to search users</div>
+  </div>
+
+  <footer>Search from the users table — results update as you type</footer>
 </div>
 
-<script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+<script>
+  (function(){
+    // REST-based search implementation to avoid client SDK issues.
+    const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA";
 
-  const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA"; // Replace your anon key here
-  const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+    const qEl = document.getElementById('q');
+    const resultsEl = document.getElementById('results');
+    const loadingEl = document.getElementById('loading');
+    const statusEl = document.getElementById('status');
+    const backBtn = document.getElementById('back');
 
-  let currentUser = JSON.parse(localStorage.getItem('hc_profile') || '{}');
-  let allUsers = [];
+    backBtn.addEventListener('click', ()=> location.href = 'home.html');
 
-  const searchInput = document.getElementById('search-input');
-  const searchResults = document.getElementById('search-results');
-  const backBtn = document.getElementById('back-btn');
-
-  // 🔹 Back Button
-  backBtn.addEventListener('click', () => window.location.href = 'home.html');
-
-  // ✅ Step 1: Load all users from Supabase — ONE TIME ONLY
-  async function loadAllUsers() {
-    const { data, error } = await supabase.from('users').select('*');
-    if (error) { console.error(error); return; }
-    allUsers = data;
-  }
-
-  // ✅ Step 2: Filter locally (Traditional Search)
-  function searchUsers(query) {
-    query = query.toLowerCase();
-    return allUsers.filter(u =>
-      (u.name && u.name.toLowerCase().includes(query)) ||
-      (u.email && u.email.toLowerCase().includes(query))
-    );
-  }
-
-  // ✅ Step 3: Display Results
-  function renderUsers(users) {
-    searchResults.innerHTML = '';
-    if (users.length === 0) {
-      searchResults.innerHTML = '<div class="no-results">No users found</div>';
-      return;
+    let debounceTimer = null;
+    // Safely encode the or filter for Supabase REST. We'll use URL encoding for parentheses.
+    function buildOrFilter(q){
+      // Supabase REST expects something like:
+      // ?select=name,email,profile_url&or=(name.ilike.*term*,email.ilike.*term*)
+      // encode parentheses and commas
+      const like = encodeURIComponent(`%${q}%`);
+      // We'll construct the or param already encoded:
+      // or=(name.ilike.*q*,email.ilike.*q*)
+      const raw = `(name.ilike.*${q}*,email.ilike.*${q}*)`;
+      return encodeURIComponent(raw);
     }
-    users.forEach(user => {
-      if (user.email === currentUser.email) return;
-      const div = document.createElement('div');
-      div.className = 'search-item';
-      div.innerHTML = `
-        <img src="${user.profile_url || 'default.png'}">
-        <div class="chat-info">
-          <div class="name">${user.name}</div>
-          <div class="email">${user.email}</div>
-        </div>
-      `;
-      div.addEventListener('click', () => {
-        window.location.href = `chat.html?name=${encodeURIComponent(user.name)}&email=${encodeURIComponent(user.email)}&profile_url=${encodeURIComponent(user.profile_url)}`;
-      });
-      searchResults.appendChild(div);
+
+    async function restSearch(query){
+      // Use server-side ilike via REST endpoint to return matching rows.
+      // Endpoint: /rest/v1/users?select=name,email,profile_url&or=(name.ilike.*q*,email.ilike.*q*)
+      const select = 'select=name,email,profile_url';
+      const or = `or=${buildOrFilter(encodeURIComponent(query))}`; // double-encode name safe
+      const url = `${SUPABASE_URL}/rest/v1/users?${select}&${or}&limit=100`;
+      const headers = {
+        'apikey': SUPABASE_KEY,
+        'Authorization': 'Bearer ' + SUPABASE_KEY,
+        'Accept': 'application/json'
+      };
+
+      try {
+        const resp = await fetch(url, { method: 'GET', headers });
+        if (!resp.ok) {
+          const text = await resp.text();
+          throw new Error(`HTTP ${resp.status}: ${text}`);
+        }
+        const data = await resp.json();
+        return data;
+      } catch (err) {
+        throw err;
+      }
+    }
+
+    function renderList(users){
+      resultsEl.innerHTML = '';
+      if (!users || users.length === 0) {
+        resultsEl.innerHTML = `<div class="no-results">No users found</div>`;
+        return;
+      }
+      const fragment = document.createDocumentFragment();
+      for (const u of users){
+        const row = document.createElement('div');
+        row.className = 'row';
+        row.tabIndex = 0;
+        row.innerHTML = `
+          <img class="avatar" src="${u.profile_url || 'https://ui-avatars.com/api/?name=' + encodeURIComponent(u.name || 'User')}" alt="avatar">
+          <div class="info">
+            <div class="name">${escapeHtml(u.name || '')}</div>
+            <div class="email">${escapeHtml(u.email || '')}</div>
+          </div>
+        `;
+        row.addEventListener('click', ()=> {
+          // navigate to chat with query params
+          const params = new URLSearchParams({
+            name: u.name || '',
+            email: u.email || '',
+            profile_url: u.profile_url || ''
+          });
+          location.href = `chat.html?${params.toString()}`;
+        });
+        fragment.appendChild(row);
+      }
+      resultsEl.appendChild(fragment);
+    }
+
+    function showLoading(on){
+      loadingEl.style.display = on ? 'inline-block' : 'none';
+      statusEl.textContent = on ? 'Searching…' : '';
+    }
+
+    function showError(msg){
+      resultsEl.innerHTML = `<div class="error">${escapeHtml(msg)}</div>`;
+      statusEl.textContent = 'Error';
+    }
+
+    // simple escaping
+    function escapeHtml(s){ return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+
+    qEl.addEventListener('input', (e)=>{
+      const val = e.target.value.trim();
+      clearTimeout(debounceTimer);
+      if (!val) {
+        resultsEl.innerHTML = `<div class="no-results">Type to search users</div>`;
+        statusEl.textContent = '';
+        return;
+      }
+      debounceTimer = setTimeout(async ()=>{
+        showLoading(true);
+        try {
+          // Attempt search; if REST filter syntax fails on the server due to policies, we'll show an informative error.
+          const rows = await restSearch(val);
+          renderList(rows);
+          statusEl.textContent = `${rows.length} result${rows.length===1?'':'s'}`;
+        } catch (err) {
+          console.error('Search error', err);
+          // If the server returns an error due to RLS or policy, show friendly message and hint.
+          let msg = err.message || 'Search failed';
+          if (/permission|row-level security|forbidden|401|403/i.test(msg)) {
+            msg = 'Search blocked by database permissions. Ensure your users table allows anon/unauthenticated SELECT (Row Level Security).';
+          }
+          showError(msg);
+        } finally {
+          showLoading(false);
+        }
+      }, 300); // debounce 300ms
     });
-  }
 
-  // ✅ Step 4: Search Input Listener
-  searchInput.addEventListener('input', e => {
-    const query = e.target.value.trim();
-    if (!query) {
-      searchResults.innerHTML = '<div class="no-results">Type to search...</div>';
-      return;
-    }
-    const results = searchUsers(query);
-    renderUsers(results);
-  });
-
-  // ✅ First load all users
-  loadAllUsers();
+    // Focus input on load
+    qEl.focus();
+  })();
 </script>
-
 </body>
 </html>
