--- a/home.html
+++ b/home.html
@@ -7,206 +7,142 @@
 <link rel="icon" href="hybrid.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 <style>
-  :root {
-  --bg: #f3f4f6;
-  --card: #fff;
-  --muted: #6b7280;
-  --hover: #e5e7eb;
+:root{
+  --bg:#f3f4f6;
+  --card:#fff;
+  --muted:#6b7280;
+  --accent:#2563eb;
+  --hover:#eef2ff;
 }
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  background: var(--bg);
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  height: 100vh;
-  padding-top: 50px;
-}
-
-/* ✅ Fix the card height so it fits till bottom but doesn’t stretch */
-.card {
-  width: 50%;
-  background: var(--card);
-  border-radius: 12px;
-  box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 80px); /* Adjusts to screen and leaves padding */
-  overflow: hidden;
-}
-
-/* Header remains sticky inside fixed height */
-header {
-  background: var(--card);
-  padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-
-header h1 {
-  font-size: 1.5rem;
-  color: #111827;
-}
-
-header button {
-  background: none;
-  border: none;
-  font-size: 1.2rem;
-  cursor: pointer;
-  color: var(--muted);
-}
-
-#chat-list {
-  flex: 1;
-  overflow-y: auto;
-  padding: 8px;
-}
-
-.chat-item {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  background: var(--card);
-  border-radius: 12px;
-  margin-bottom: 8px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-
-.chat-item:hover {
-  background: var(--hover);
-}
-
-.chat-item img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.chat-info {
-  margin-left: 12px;
-  flex: 1;
-}
-
-.chat-info .name {
-  font-weight: 600;
-  color: #111827;
-}
-
-.chat-info .last-msg {
-  font-size: 0.875rem;
-  color: var(--muted);
-}
-
-.chat-time {
-  font-size: 0.75rem;
-  color: var(--muted);
-  white-space: nowrap;
-}
-
-.no-chat {
-  text-align: center;
-  padding: 32px;
-  color: var(--muted);
-  font-weight: 500;
-}
-
+*{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif}
+body{min-height:100vh;background:var(--bg);display:flex;align-items:flex-start;justify-content:center;padding:48px 16px}
+.card{width:520px;height:calc(100vh-80px);max-width:96vw;background:var(--card);border-radius:12px;box-shadow:0 18px 48px rgba(2,6,23,0.12);overflow:hidden;display:flex;flex-direction:column}
+header{display:flex;align-items:center;justify-content:space-between;padding:14px 16px;border-bottom:1px solid rgba(15,23,42,0.04)}
+header .title{font-size:18px;font-weight:700;color:#0f172a}
+header .controls{display:flex; gap:10px;align-items:center}
+.btn{background:transparent;border:0;font-size:16px;cursor:pointer;color:var(--muted);padding:6px;border-radius:8px}
+.btn:hover{background:#f1f5f9}
+#chat-list{flex:1;overflow:auto;padding:12px;display:flex;flex-direction:column;gap:8px}
+.item{display:flex;align-items:center;gap:12px;padding:10px;border-radius:10px;background:transparent;cursor:pointer;transition:background .12s}
+.item:hover{background:var(--hover)}
+.avatar{width:52px;height:52px;border-radius:50%;object-fit:cover;flex-shrink:0}
+.meta{display:flex;flex-direction:column;min-width:0}
+.meta .name{font-weight:700;color:#0f172a;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+.meta .msg{font-size:13px;color:var(--muted);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+.time{font-size:12px;color:var(--muted);margin-left:auto;white-space:nowrap}
+.no-chat{display:flex;align-items:center;justify-content:center;height:100%;color:var(--muted);font-weight:600}
+.error{padding:12px;color:#b91c1c}
 </style>
 </head>
 <body>
 
 <div class="card">
   <header>
-    <h1>Chats</h1>
-    <button id="search-btn"><i class="fas fa-magnifying-glass"></i></button>
+    <div class="title">Chats</div>
+    <div class="controls">
+      <button id="searchBtn" class="btn" title="Search"><i class="fa-solid fa-magnifying-glass"></i></button>
+      <button id="refreshBtn" class="btn" title="Refresh"><i class="fa-solid fa-arrows-rotate"></i></button>
+    </div>
   </header>
 
-  <div id="chat-list" class="no-chat">No chat</div>
+  <div id="chat-list">
+    <div class="no-chat">Loading chats…</div>
+  </div>
 </div>
 
 <script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+(async function(){
+  // Supabase REST URL and anon key (messages table)
+  const MSG_REST_URL = 'https://ilgkibqwngznqwnhgavh.supabase.co/rest/v1';
+  const MSG_ANON = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlsZ2tpYnF3bmd6bnF3bmhnYXZoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE0NzU3NDcsImV4cCI6MjA3NzA1MTc0N30.jFHL4VDU81BRqxpoWc4u_4VYG4sI-SB0-EkxSfPGZ5k';
 
-const MESSAGES_URL = "https://ilgkibqwngznqwnhgavh.supabase.co";
-const MESSAGES_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlsZ2tpYnF3bmd6bnF3bmhnYXZoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE0NzU3NDcsImV4cCI6MjA3NzA1MTc0N30.jFHL4VDU81BRqxpoWc4u_4VYG4sI-SB0-EkxSfPGZ5k";
-const messagesSupabase = createClient(MESSAGES_URL, MESSAGES_KEY);
+  const chatListEl = document.getElementById('chat-list');
+  const searchBtn = document.getElementById('searchBtn');
+  const refreshBtn = document.getElementById('refreshBtn');
 
-let hc_profile = JSON.parse(localStorage.getItem('hc_profile') || '{}');
+  // Get current user from hc_profile
+  const stored = localStorage.getItem('hc_profile');
+  if(!stored) { window.location.href = 'register.html'; return; }
+  const me = JSON.parse(stored);
 
-const chatList = document.getElementById("chat-list");
-const searchBtn = document.getElementById("search-btn");
+  // Helper to safely quote values for REST
+  const quoted = v => `"${String(v).replace(/"/g,'""')}"`;
 
-searchBtn.addEventListener('click', () => {
-  window.location.href = 'search.html';
-});
-
-async function fetchChatList(){
-  const { data } = await messagesSupabase
-    .from('messages')
-    .select('sender,receiver,message,created_at')
-    .or(`sender.eq.${hc_profile.email},receiver.eq.${hc_profile.email}`)
-    .order('created_at', { ascending: false });
-
-  if(!data || data.length === 0){
-    chatList.textContent = 'No chat';
-    return;
+  // Build messages REST query based on current user
+  function buildMessagesQuery(email){
+    const orRaw = `(sender.eq.${quoted(email)},receiver.eq.${quoted(email)})`;
+    const qs = [
+      'select=sender,receiver,message,created_at',
+      'order=created_at.desc',
+      'limit=1000',
+      'or=' + encodeURIComponent(orRaw)
+    ].join('&');
+    return qs;
   }
 
-  const chatMap = new Map();
-  data.forEach(msg => {
-    const otherEmail = msg.sender === hc_profile.email ? msg.receiver : msg.sender;
-    if(!chatMap.has(otherEmail)) chatMap.set(otherEmail, msg);
-  });
-
-  chatList.innerHTML = '';
-  for(const [email, msg] of chatMap.entries()){
-    const { data:userData } = await messagesSupabase
-      .from('users')
-      .select('name, profile_url')
-      .eq('email', email)
-      .single();
-    if(!userData) continue;
-
-    const div = document.createElement('div');
-    div.className = 'chat-item';
-    div.innerHTML = `
-      <img src="${userData.profile_url}">
-      <div class="chat-info">
-        <div class="name">${userData.name}</div>
-        <div class="last-msg">${msg.message}</div>
-      </div>
-      <div class="chat-time">${new Date(msg.created_at).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}</div>
-    `;
-    div.addEventListener('click', () => {
-      window.location.href = `chat.html?name=${encodeURIComponent(userData.name)}&email=${encodeURIComponent(email)}&profile_url=${encodeURIComponent(userData.profile_url)}`;
-    });
-    chatList.appendChild(div);
+  async function restGet(qs){
+    const url = MSG_REST_URL + '/messages?' + qs;
+    const headers = {
+      'apikey': MSG_ANON,
+      'Authorization': 'Bearer ' + MSG_ANON,
+      'Accept': 'application/json'
+    };
+    const res = await fetch(url,{headers});
+    if(!res.ok) throw new Error('Failed to fetch messages: '+res.status);
+    return res.json();
   }
-}
 
-messagesSupabase
-  .channel('user-presence')
-  .on('postgres_changes', { event: '*', schema: 'public', table: 'users' }, payload => {
-    console.log("User update detected:", payload);
-    fetchChatList();
-  })
-  .subscribe();
+  function showNoChat(){ chatListEl.innerHTML = `<div class="no-chat">No chat</div>`; }
+  function showError(msg){ chatListEl.innerHTML = `<div class="error">${msg}</div>`; }
 
-fetchChatList();
+  async function loadChatList(){
+    chatListEl.innerHTML = `<div class="no-chat">Loading chats…</div>`;
+    try{
+      const qs = buildMessagesQuery(me.email);
+      const msgs = await restGet(qs);
+      if(!msgs || !msgs.length){ showNoChat(); return; }
+
+      const chatMap = new Map();
+      for(const m of msgs){
+        const other = (m.sender===me.email)?m.receiver:m.sender;
+        if(!chatMap.has(other)) chatMap.set(other, m);
+      }
+
+      chatListEl.innerHTML='';
+      for(const [otherEmail, recentMsg] of chatMap.entries()){
+        const name = otherEmail.split('@')[0]; // fallback: use email as name
+        const avatar = `https://ui-avatars.com/api/?name=${encodeURIComponent(name)}`;
+
+        const item = document.createElement('div');
+        item.className='item';
+        item.innerHTML=`
+          <img class="avatar" src="${avatar}" alt="avatar">
+          <div class="meta">
+            <div class="name">${name}</div>
+            <div class="msg">${recentMsg.message}</div>
+          </div>
+          <div class="time">${new Date(recentMsg.created_at).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>
+        `;
+        item.addEventListener('click', ()=> {
+          const params = new URLSearchParams({name:name,email:otherEmail,profile_url:''});
+          location.href=`chat.html?${params.toString()}`;
+        });
+        chatListEl.appendChild(item);
+      }
+    }catch(e){
+      console.error(e);
+      showError('Unable to load chats. Check database or network.');
+    }
+  }
+
+  refreshBtn.addEventListener('click', loadChatList);
+  searchBtn.addEventListener('click', ()=> location.href='search.html');
+
+  await loadChatList();
+  // Optional auto-refresh every 30s
+  setInterval(loadChatList, 30000);
+
+})();
 </script>
 </body>
 </html>
-
